fixed mond background image bug on firefox

--- a/styles/modules/background.module.scss
+++ b/styles/modules/background.module.scss
@@ -18,7 +18,7 @@
 .mond {
 	background-image: url("/images/genshin/jean_namecard.png");
 	background-repeat: no-repeat;
-	background-size: auto 100vh;
+	background-size: 100% 100vh;
 }
 
 .fra {
